# petfishFramework

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AGENTS.md.new  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  initialization-report.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  supply-chain.yml
.opencode/agents-rules/: anti-sycophancy.md  petfish-style.md
.sisyphus/plans/: v0.1.6-plan.md  v0.2.0-plan.md  v0.3.0-plan.md  v0.4.0-plan.md  v0.5.0-plan.md  v1.0.0-plan.md  v1.1.0-plan.md  v1.2.0-plan.md
benchmarks/: benchmarks.py
docs/: adoption-guide.md  api-stability.md  api.md  architecture.md  benchmark-results.md  compatibility-matrix.md  deployment.md  development.md  enterprise-expense-demo.md  release-checklist.md  release-protocol.md  skeleton-completeness-checklist.md  test-results-report.md  threat-model.md  usage-guide.md  validation-roadmap.md
docs/feedbacks/: petfishframework_0_1_4_playground_recommendations.md  petfishframework_recommendations.md  petfishframework_v0_1_6_playground_review.md  petfishframework_v0_2_1_review.md  petfishframework_v0_2_2_review.md  petfishframework_v0_4_0_review.md  petfishframework_v0_4_1_review.md  petfishframework_v0_5_1_review.md  petfishframework_v1_0_0_product_review.md
docs/feedbacks/archives/: petfishframework_playground_report.md  petfishframework_production_readiness_roadmap.md  petfishframework_v0_1_7_review.md  petfishframework_v0_1_8_review.md  petfishframework_v0_3_0_review.md
docs/research/: reference-repos-absorption.md
docs/research/competitor-analysis/: README.md  competitor-matrix.md  market-brief.md  positioning-map.md  swot-analysis.md
docs/research/literature-review/: inclusion-exclusion-criteria.md  literature-matrix.md  literature-review.md  search-strategy.md
examples/: 01_quickstart.py  02_tools_and_retrieval.py  03_multi_agent.py  04_enterprise_expense.py  05_enterprise_expense.py  06_observability.py
examples/policies/: enterprise-expense.yaml
mcp/: README.md  connection-checklist.md
qa/: code-review-checklist.md  qa-review.md  qc-gate-decision.md  test-plan.md
scripts/: __init__.py  bbh_quick.py  benchmark.py  check_pypi.py  debug_tool_format.py  mcp_validation.py  mmlu_bbh_benchmark.py  mmlu_bbh_rerun.py  mmlu_quick.py  mmlu_struct_3.py  mmlu_structured.py  pass_at_k_benchmark.py  pass_at_k_benchmark_v2.py  policy_lint.py  policy_simulate.py  pre_release.py  prove_structured.py  tier1_mini.py
src/petfishframework/: __init__.py  __main__.py  config.py
src/petfishframework/core/: __init__.py  agent.py  compiled.py  compiler.py  context.py  contracts.py  conversation.py  environment.py  errors.py  event_store.py  events.py  session.py  structured.py  types.py
src/petfishframework/credentials/: __init__.py  broker.py  provider.py  token.py  vault_adapter.py
src/petfishframework/mcp/: __init__.py  allowlist.py  client.py  exceptions.py  http_transport.py  risk_mapper.py  schema_pin.py  server.py  stdio_transport.py  transport.py  wrapper.py
src/petfishframework/models/: __init__.py  anthropic.py  fake.py  openai.py  pricing.py
src/petfishframework/observability/: __init__.py  otel_sink.py  siem_sink.py  sinks.py
src/petfishframework/server/: app.py  (+1 more)
tasks/: backlog.md
tests/: test_agent_as_tool_identity.py  test_agent_tool.py  test_anthropic_adapter.py  test_api_agent_lifecycle.py  test_api_edge_cases.py  test_api_integration.py  test_api_public_surface.py  test_api_type_safety.py  test_approval.py  test_async.py  test_audit_report_v2.py  test_capability_catalog.py  test_ci_markers.py  test_circuit_breaker.py  test_config_validation.py  test_context_compiler.py  test_conversation.py  test_credential_broker.py  test_credential_integration.py  test_degrade.py  test_degrade_failclosed.py  test_dockerfile.py  test_enterprise_demo.py  test_environment_refactor.py  test_error_codes.py  test_event_emitter.py  test_event_store.py  test_lats_mcts.py  test_llm_plus_p_general.py  test_m2_m3_m4.py  test_main_entry.py  test_mcp.py  test_mcp_allowlist.py  test_mcp_http.py  test_mcp_lifecycle.py  test_mcp_risk_mapping.py  test_mcp_schema_pin.py  test_mcp_server.py  test_mypy_clean.py  test_openai_adapter.py  (+44 more)
tests/integration/: __init__.py  test_anthropic_integration.py  test_openai_integration.py
tests/policies/: enterprise-expense.tests.yaml
(+46 files in other folders)
