[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petfishframework"
version = "0.1.0"
description = "petfishFramework — a general AI Agent framework"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/petfishframework"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
