[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petfishframework"
version = "0.1.0"
description = "petfishFramework — a general AI Agent framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kyle Cui", email = "18226150+kylecui@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/petfishframework"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires real API keys (OPENAI_API_KEY, ANTHROPIC_API_KEY). Skipped by default.",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
]
