[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petfishframework"
version = "0.5.0"
description = "A lightweight runtime framework for reliable, auditable, budget-aware, and permission-aware AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kyle Cui", email = "18226150+kylecui@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/kylecui/petfishFramework"
Documentation = "https://github.com/kylecui/petfishFramework/tree/master/docs"
Repository = "https://github.com/kylecui/petfishFramework"
Changelog = "https://github.com/kylecui/petfishFramework/blob/master/CHANGELOG.md"
Issues = "https://github.com/kylecui/petfishFramework/issues"
"PyPI" = "https://pypi.org/project/petfishframework/"

[tool.hatch.build.targets.wheel]
packages = ["src/petfishframework"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".opencode/",
    ".petfish/",
    "outputs/",
    "examples/",
    "scripts/",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
vault = ["hvac>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires real API keys (OPENAI_API_KEY, ANTHROPIC_API_KEY). Skipped by default.",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "twine>=6.2.0",
]
